--- a/src/CleanDDDCQRS.API/CleanDDDCQRS.API.csproj
+++ b/src/CleanDDDCQRS.API/CleanDDDCQRS.API.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.9.0" />
   </ItemGroup>
 
  
